# volery

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  LICENSE  README.md  Roadmap.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
concepts/: TEMPLATE.md  drongo.md  rxp.md
docs/: Architecture-Decision.md  Architecture.md  Roadmap.md  cxp-v020-architecture.md  owasp_mapping.md
docs/plans/: 2026-02-25-phase-d-integration.md  2026-02-25-scaffold-monorepo.md
documentation/: concepts.mdx  docs.json
documentation/cxp/: cli.mdx  overview.mdx
documentation/ipi/: overview.mdx
documentation/rxp/: overview.mdx
harness/: README.md  harness.py
src/countersignal/: __init__.py  __main__.py  cli.py
src/countersignal/core/: __init__.py  db.py  evidence.py  listener.py  models.py
src/countersignal/cxp/: __init__.py  base_loader.py  builder.py  catalog.py  cli.py  evidence.py  models.py  prompt_reference.py  reporter.py  validator.py
src/countersignal/cxp/bases/: __init__.py  agents-md.md  claude-md.md  copilot-instructions.md  cursorrules.txt  gemini-md.md  windsurfrules.txt
src/countersignal/cxp/objectives/: __init__.py  cmdexec.py  depconfusion.py  permescalation.py
src/countersignal/cxp/rules/: __init__.py  extra-index-url.yaml  hardcoded-secrets.yaml  insecure-perms.yaml  no-csrf.yaml  outbound-exfil.yaml  shell-true.yaml  stack-traces.yaml  weak-crypto-md5.yaml
src/countersignal/cxp/techniques/: __init__.py
src/countersignal/cxp/techniques/templates/backdoor/: agents-md.md.j2  gemini-md.md.j2  windsurfrules.txt.j2
src/countersignal/cxp/techniques/templates/cmdexec/: agents-md.md.j2  copilot-instructions.md.j2  gemini-md.md.j2  windsurfrules.txt.j2
src/countersignal/cxp/techniques/templates/depconfusion/: claude-md.md.j2  copilot-instructions.md.j2  gemini-md.md.j2  windsurfrules.txt.j2
src/countersignal/cxp/techniques/templates/exfil/: agents-md.md.j2  gemini-md.md.j2  windsurfrules.txt.j2
src/countersignal/cxp/techniques/templates/permescalation/: agents-md.md.j2  copilot-instructions.md.j2  cursorrules.txt.j2  gemini-md.md.j2
src/countersignal/cxp/tui/: __init__.py  format_screen.py  rules_screen.py
src/countersignal/ipi/: __init__.py  cli.py  server.py
src/countersignal/ipi/generators/: __init__.py  image.py  pdf.py
src/countersignal/ipi/static/: style.css
src/countersignal/ipi/templates/: campaign_detail.html  campaigns.html  dashboard.html  generate.html  hits.html  layout.html
src/countersignal/rxp/: __init__.py  cli.py  collection.py  embedder.py  models.py  registry.py  validator.py
tests/: conftest.py  test_cli_version.py
tests/core/: test_db_roundtrip.py
tests/cxp/: test_base_loader.py  test_builder.py  test_builder_v2.py  test_catalog.py  test_cli_generate.py  test_evidence.py  test_objectives.py  test_prompt_reference.py  test_reporter.py  test_techniques.py  test_tui.py  test_validator.py
tests/ipi/: test_export_prompt.py
tests/rxp/: test_cli.py  test_collection.py  test_deps.py  test_embedder.py  test_models.py  test_registry.py  test_validator.py
