[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "countersignal"
version = "0.2.0"
description = "Agentic AI content & supply chain attack toolkit — indirect prompt injection, context poisoning, and retrieval poisoning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Richard Spicer", email = "richard@richardspicer.io" },
]
keywords = ["security", "ai-security", "prompt-injection", "red-team", "rag-poisoning", "context-poisoning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    # CLI & display
    "typer>=0.24.0",
    "rich>=13.0.0",
    # Web listener (IPI dashboard + shared callback server)
    "fastapi>=0.133.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    # Models & validation
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    # YAML parsing (RXP domain profiles)
    "pyyaml>=6.0",
    # TUI framework (CXP builder interface)
    "textual>=8.0.0",
    # IPI document generators
    "reportlab>=4.4.0",
    "pypdf>=6.7.4",
    "piexif>=1.1.3",
    "python-docx>=1.2.0",
    "icalendar>=6.0.0",
]

[project.optional-dependencies]
rxp = [
    "sentence-transformers>=5.2,<6",
    "chromadb>=1.5,<2",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4",
    "pytest-asyncio>=0.25",
    "ruff>=0.15",
    "pre-commit>=4.3.0",
    "mypy>=1.19",
    "types-PyYAML>=6.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10",
]

[project.scripts]
countersignal = "countersignal.cli:app"

[project.urls]
Homepage = "https://richardspicer.io"
Repository = "https://github.com/q-uestionable-AI/countersignal"
Issues = "https://github.com/q-uestionable-AI/countersignal/issues"
Documentation = "https://github.com/q-uestionable-AI/countersignal/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/countersignal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "S", "SIM"]
ignore = [
    "S101",  # assert usage (fine in tests)
    "S104",  # binding to 0.0.0.0 (IPI listener needs all-interface bind)
    "S311",  # pseudo-random generators (non-cryptographic use in payload generation)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"harness/*" = ["S", "E501", "C901"]
"tests/*" = ["S"]

[tool.bandit]
exclude_dirs = ["tests", "harness"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "harness.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
